<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/avatar_default_svgrepo_com"
        android:contentDescription="@string/avatar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_description"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginBottom="48dp"
        android:alpha="0.8" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/continue_button"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
       />

</LinearLayout>